--- a/index.html
+++ b/index.html
@@ -3,39 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Profile card component</title>
+  <link rel="stylesheet" href="styles.css">
+  <title>Frontend Mentor | 3-column preview card component</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+
+  </style>
 </head>
 <body>
-  <main class="container">
-    <div class="card-header"></div>
-    <img class="profile-img" src="images/image-victor.jpg" alt="">
-    <div class="profile">
-      <div class="profile-info">
-        <span class="profile-name">Victor Crest</span>
-        <span class="profile-age">26</span>
-        <span class="profile-city">London</span>
+  
+  <main>
+    <div class="card left">
+      <img src="images/icon-sedans.svg" alt="">
+      <h1>Sedans</h1>
+      <div class="description">
+        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+        or on your next road trip.
       </div>
-      <div class="profile-stats">
-        <div class="stat-box profile-stats__left">
-          <p class="profile-stats__number">80K</p>
-          <p class="profile-stats__title">Followers</p>
-        </div>
-        <div class="stat-box profile-stats__center">
-          <p class="profile-stats__number">803K</p>
-          <p class="profile-stats__title">Likes</p>
-        </div>
-        <div class="stat-box profile-stats-right">
-          <p class="profile-stats__number">1.4K</p>
-          <p class="profile-stats__title">Photos</p>
-        </div>
-      </div>  
+      <button class="btn-1">Learn More</button>
+    </div>
+    <div class="card center">
+      <img src="images/icon-suvs.svg" alt="">
+      <h1>SUVs</h1>
+      <div class="description">
+        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+        and off-road adventures.
+      </div>
+      <button class="btn-2">Learn More</button>
+    </div>
+    <div class="card right">
+      <img src="images/icon-luxury.svg" alt="">
+      <h1>Luxury</h1>
+      <div class="description">
+        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+        rental and arrive in style.
+      </div>
+      <button class="btn-3">Learn More</button>
     </div>
   </main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Sami Nasri</a>.
-  </div>
+  
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://twitter.com/iSilverWings" target="_blank">Sami Nasri</a>.
+    </div>
+  </footer>
 </body>
 </html>
